--- a/search-movie/package.json
+++ b/search-movie/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "search-movie",
+  "name": "rick-and-morty-character-search",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
